@@ -2,10 +2,14 @@ EBUILD perl-Scalar-List-Utils-1.18.ebuild 524 RMD160 a4c18991c0f7cce27e0879c2687
 MD5 4e8e1657ab5cb7d2fa72a0dba4cbc302 perl-Scalar-List-Utils-1.18.ebuild 524
 RMD160 a4c18991c0f7cce27e0879c2687633e13f8773e2 perl-Scalar-List-Utils-1.18.ebuild 524
 SHA256 b9f10061c4ad1de8bd81d349240d209a48ee07d11a1acc50832fb6d8a57c8fb0 perl-Scalar-List-Utils-1.18.ebuild 524
-MISC ChangeLog 1581 RMD160 0077e7efbcd823e7262fc2675769c1808adefa75 SHA1 0a82b6ab3cc405383449521a557fe19f96023fe1 SHA256 3810d3869e4f9832f58696b3f5208279d87b3bba038403cef262cf152c0ed4fe
-MD5 39c329e444ea3295f5cfb13f10713feb ChangeLog 1581
-RMD160 0077e7efbcd823e7262fc2675769c1808adefa75 ChangeLog 1581
-SHA256 3810d3869e4f9832f58696b3f5208279d87b3bba038403cef262cf152c0ed4fe ChangeLog 1581
+EBUILD perl-Scalar-List-Utils-1.19.ebuild 488 RMD160 8d7217c81cfeeafc704c88a0d30cbfb88cc0bcdb SHA1 7e47fef9307ac86eeda31cd6f71d49c1423162f5 SHA256 409d698abb6a3c9d7116ef2839969e8e5a5a89d8dde825d2c057586e2f46f29a
+MD5 3fc1f740ef5800dc78226c5cf9477a04 perl-Scalar-List-Utils-1.19.ebuild 488
+RMD160 8d7217c81cfeeafc704c88a0d30cbfb88cc0bcdb perl-Scalar-List-Utils-1.19.ebuild 488
+SHA256 409d698abb6a3c9d7116ef2839969e8e5a5a89d8dde825d2c057586e2f46f29a perl-Scalar-List-Utils-1.19.ebuild 488
+MISC ChangeLog 1735 RMD160 b57a315faf6a7f3497145a1e6a508bb2cb29bdb4 SHA1 887eb88322138a529eedb635c24c898859d6391f SHA256 09c68f5243c974df4f4f38c2f8bc38ff5e23d1298aa78ed6b3fc450543bc6dfc
+MD5 ec7021c632ce98562c2bcec082c32e40 ChangeLog 1735
+RMD160 b57a315faf6a7f3497145a1e6a508bb2cb29bdb4 ChangeLog 1735
+SHA256 09c68f5243c974df4f4f38c2f8bc38ff5e23d1298aa78ed6b3fc450543bc6dfc ChangeLog 1735
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -13,3 +17,6 @@ SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-perl-Scalar-List-Utils-1.18 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-perl-Scalar-List-Utils-1.18 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-perl-Scalar-List-Utils-1.18 0
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-perl-Scalar-List-Utils-1.19 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-perl-Scalar-List-Utils-1.19 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-perl-Scalar-List-Utils-1.19 0
