@@ -1,0 +1,16 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Scalar-List-Utils/perl-Scalar-List-Utils-1.19.ebuild,v 1.1 2007/01/02 15:28:41 mcummings Exp $
+
+EAPI="prefix"
+
+DESCRIPTION="Virtual for Scalar-List-Utils"
+HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86"
+IUSE=""
+
+RDEPEND="~perl-core/Scalar-List-Utils-${PV}"
