@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Scalar-List-Utils
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Scalar-List-Utils/ChangeLog,v 1.11 2006/10/25 02:40:34 mcummings Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Scalar-List-Utils/ChangeLog,v 1.12 2007/01/02 15:28:41 mcummings Exp $
+
+*perl-Scalar-List-Utils-1.19 (02 Jan 2007)
+
+  02 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  +perl-Scalar-List-Utils-1.19.ebuild:
+  Version bump
 
   25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
   -perl-Scalar-List-Utils-1.14.ebuild:
